# coins

./: .gitignore  README.md  run.sh
.github/workflows/: server.yml
cli/: Cargo.toml  images.sh
cli/src/: main.rs  utils.rs
demo/: commands_list.sh  flush.sh  kill.sh  plot_demo.m  run.sh
demo/tex_doc/: formulas.tex
game/: Cargo.toml  index.html
game/Bootstrap Materials/: Game Page.bsdesign  index.html
game/Bootstrap Materials/assets/css/: styles.css
game/src/: audio.rs  coin.rs  lib.rs
login/: index.html
login/Bootstrap Materials/: Login Page.bsdesign  index.html
login/src/: lib.rs
login/style/: styles.css
server/: Cargo.toml  dump.cbor  dump.json
server/src/: app.rs  cli.rs  handlers.rs  main.rs
text_cli/: Cargo.toml  rendered_dump.json
text_cli/src/: main.rs  utils.rs
view/: Cargo.toml  dump.cbor  index.html
view/src/: lib.rs
view/style/: styles.css
