[package]
name = "coins"
version = "0.1.0"
authors = ["Francis Chua <hwymonkey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-web-actors = "3.0.0"
actix = "0.10.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1.0.123"
actix-files = "0.3"
env_logger = "0.8"
anyhow = "1.0.37"
rand = "0.8.4"
rand_distr="0.4.1"
serde_cbor = "0.11.2"
clap = "3.0.0-beta.2"
time = "0.2"
