[package]
name = "text_cli"
version = "0.1.0"
authors = ["Francis Chua <francis@opennetworking.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usvg = "0.18.0"
resvg = "0.18.0"
tiny-skia = "0.6.1"
serde =  { version = "1.0.123", features = ["derive"] }
serde_cbor = "0.11.2"
rv = "0.13.0"

[features]
default = ["text"]
text = ["usvg/system-fonts", "usvg/text"] # enables SVG Text support
