[package]
name = "login"
version = "0.1.0"
authors = ["Francis Chua <hwymonkey@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_log = "^0.1"
log = "^0.4"
serde =  { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.67"
wasm-bindgen = "0.2.73"
js-sys = "0.3.55"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
wasm-bindgen-futures = "0.4.24"
urlencoding = "2.1.0"

[dependencies.mogwai]
version = "0.3.6"

[dependencies.web-sys]
version = "^0.3"
# Add more web-sys API's as you need them
features = [
  "HtmlInputElement",
  "HtmlElement",
  "InputEvent",
  "console",
  "KeyboardEvent",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Location",
]
console_log = { version = "0.2", features = ["color"] }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
